--- a/kankan/pages/setting/point_buy.html
+++ b/kankan/pages/setting/point_buy.html
@@ -20,7 +20,8 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
 			<a class="lang" data-locale="back"></a>
-			<h1 class="mui-title"><span class="lang" data-locale="change">チャージ</span></h1>
+			<h1 class="mui-title"><span class="lang" data-locale="">point buy</span></h1>
+			<button type="button" class="mui-btn mui-btn-blue mui-pull-right">充值</button>
 		</header>
 		<div class="mui-content">
 			<form class="mui-input-group">
