首页逻辑优化。

--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -220,6 +220,12 @@
 										type: 'div'
 									})
 								}
+								if (data == "2002") {
+									mui.toast(TextMessage.userng, {
+										duration: 'long',
+										type: 'div'
+									})
+								}
 							},
 							error: function() {
 								waiting.close();
