返回首页刷新，详情页求购商品显示测试bug改修

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -293,6 +293,10 @@
 					},
 					ng: function(data) {
 						Log.d(data);
+						if(data=="2001"){
+							$("#loading").show();
+							$(".mui-content").hide();
+						}
 					}
 				});
 			}
