--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -407,12 +407,6 @@
 })(mui, document);
 //submit form
 function publishs() {
-	mui.plusReady(function() {
-		var mainpage=plus.webview.getLaunchWebview();
-		var list = plus.webview.currentWebview().opener();
-		 mui.fire(mainpage,'gohome');
-		  return true;
-	});
 	//return confirm(TextMessage.publishsure);
 	var buy_sell_flag = "0";
 	var comm_name = $("#comm_name").val();
@@ -496,7 +490,11 @@ function publishs() {
 			Log.d("success");
 			alert(TextMessage.pro_logininfo);
 			if(commodity_id==""){
-				location.reload();
+				mui.plusReady(function() {
+					var mainpage=plus.webview.getLaunchWebview();
+					 mui.fire(mainpage,'gohome');
+				});
+				//location.reload();
 			}else{
 				mui.back();
 			}
