--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -134,6 +134,10 @@
 								type: 'div'
 							})
 						}
+						mui.openWindow({
+							id: 'login',
+							url:"../../login/login.html"
+						});
 					}
 				});
 			}
