--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -490,11 +490,12 @@ function publishs() {
 			Log.d("success");
 			alert(TextMessage.pro_logininfo);
 			if(commodity_id==""){
+				location.reload();
 				mui.plusReady(function() {
 					var mainpage=plus.webview.getLaunchWebview();
 					 mui.fire(mainpage,'gohome');
 				});
-				//location.reload();
+				
 			}else{
 				mui.back();
 			}
