--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -302,7 +302,11 @@
 					id: 'product_login.html',
 					url: '../products/product_login.html'
 				}
-			]
+			],
+			beforeback: function() {
+		        var homePage = plus.webview.getWebviewById('pullrefresh_with_tab');
+				mui.fire(homePage, 'refresh');
+		    }
 		});
 		function closed(){
 			mui.toast(TextMessage.noopen, {
@@ -591,100 +595,102 @@
 			//compress Image
 			var path=$("#headimgupdate").val();
 			var serverimg=$(".headimg").attr("src");
-			if(path==""){
-				var params4={
-					"flag":"info",
-					"nick_name":nickname,
-					"talk_flag":talk_flagtru,
-					"introduce":introduce
-				};
-				Repository.User.userinfo(params4, {
-					ok: function(data) {
-						console.log("success");
-						mui.toast(TextMessage.updatesuccessinfo, {
-							duration: 'long',
-							type: 'div'
-						});
-					},
-					ng: function(data) {
-						Log.d(data);
-						if(data == "1000") {
-							mui.toast(TextMessage.test, {
+			mui.plusReady(function() {
+				if(path==""){
+					var params4={
+						"flag":"info",
+						"nick_name":nickname,
+						"talk_flag":talk_flagtru,
+						"introduce":introduce
+					};
+					Repository.User.userinfo(params4, {
+						ok: function(data) {
+							console.log("success");
+							mui.toast(TextMessage.updatesuccessinfo, {
 								duration: 'long',
 								type: 'div'
 							});
-							mui.openWindow({
-								id: 'login',
-								url:"../../login/login.html"
-							});
-						} 
-						if(data=="2002"){
-							mui.toast(TextMessage.userng, {
-								duration: 'long',
-								type: 'div'
-							});
-							mui.openWindow({
-								id: 'login',
-								url:"../../login/login.html"
-							});
-						}
-						console.log("other error code:" + data);
-						
-					}
-				});
-			}else{
-				var currenttime = Date.parse(new Date());
-				plus.zip.compressImage({
-						src: path,
-						dst: "_doc/" + currenttime + ".jpg",
-						quality: 20,
-						overwrite: true,
-						format: "jpg",
-						width: "auto",
-						height: "auto"
-					},
-					function(event) {
-						console.log("Compress success!");
-						var target = event.target;
-						var size = event.size; // （Byte）
-						var width = event.width; // px
-						var height = event.height; // px
-						submitvalues(target);//upload
-					},
-					function(error) {
-						console.log("Compress error!" + error.message);
-					});
-					function submitvalues(target){
-						var serverurl=Api.url.User.userinfo;
-						var wt = plus.nativeUI.showWaiting();
-						var task = plus.uploader.createUpload(serverurl, {
-							method: "post"
-						}, function(t, status) {
-							if(status == 200) {
-								//console.log("upload success:" + t.responseText);
-								console.log("upload success!");
-								mui.toast(TextMessage.updatesuccessinfo, {
+						},
+						ng: function(data) {
+							Log.d(data);
+							if(data == "1000") {
+								mui.toast(TextMessage.test, {
 									duration: 'long',
 									type: 'div'
 								});
-								wt.close();
-							} else {
-								console.log("upload error:" + status);
-								console.log("upload error:" + t.responseText);
-								wt.close();
+								mui.openWindow({
+									id: 'login',
+									url:"../../login/login.html"
+								});
+							} 
+							if(data=="2002"){
+								mui.toast(TextMessage.userng, {
+									duration: 'long',
+									type: 'div'
+								});
+								mui.openWindow({
+									id: 'login',
+									url:"../../login/login.html"
+								});
 							}
+							console.log("other error code:" + data);
+							
+						}
+					});
+				}else{
+					var currenttime = Date.parse(new Date());
+					plus.zip.compressImage({
+							src: path,
+							dst: "_doc/" + currenttime + ".jpg",
+							quality: 20,
+							overwrite: true,
+							format: "jpg",
+							width: "auto",
+							height: "auto"
+						},
+						function(event) {
+							console.log("Compress success!");
+							var target = event.target;
+							var size = event.size; // （Byte）
+							var width = event.width; // px
+							var height = event.height; // px
+							submitvalues(target);//upload
+						},
+						function(error) {
+							console.log("Compress error!" + error.message);
 						});
-						//add parameter
-						task.addData("tokencheck", Api.getToken()); //Api.getToken()
-						task.addData("signcheck", Api.createSignInfo());
-						task.addData("flag","info");
-						task.addData("nick_name",nickname);
-						task.addData("talk_flag",talk_flagtru);
-						task.addData("introduce",introduce);
-						task.addFile(target, { key: "image" });
-						task.start();
+						function submitvalues(target){
+							var serverurl=Api.url.User.userinfo;
+							var wt = plus.nativeUI.showWaiting();
+							var task = plus.uploader.createUpload(serverurl, {
+								method: "post"
+							}, function(t, status) {
+								if(status == 200) {
+									//console.log("upload success:" + t.responseText);
+									console.log("upload success!");
+									mui.toast(TextMessage.updatesuccessinfo, {
+										duration: 'long',
+										type: 'div'
+									});
+									wt.close();
+								} else {
+									console.log("upload error:" + status);
+									console.log("upload error:" + t.responseText);
+									wt.close();
+								}
+							});
+							//add parameter
+							task.addData("tokencheck", Api.getToken()); //Api.getToken()
+							task.addData("signcheck", Api.createSignInfo());
+							task.addData("flag","info");
+							task.addData("nick_name",nickname);
+							task.addData("talk_flag",talk_flagtru);
+							task.addData("introduce",introduce);
+							task.addFile(target, { key: "image" });
+							task.start();
+						}
 					}
-				}
+				});
 		}
 		mui.plusReady(function() {
 			//message show
