--- a/kankan/pages/main/logisticslist.html
+++ b/kankan/pages/main/logisticslist.html
@@ -22,29 +22,32 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-icon-back  mui-icon mui-icon-left-nav mui-pull-left"><font size="4" id="goback"><font size="4"></a>
+			<a class="mui-icon-back mui-action-back mui-icon mui-icon-left-nav mui-pull-left">
+				<font size="4" id="goback">
+					<font size="4">
+			</a>
 			<h1 class="mui-title lang" data-locale="logistic"></h1>
 		</header>
 		<div class="mui-content" style="margin-top: 2.1em;">
 			<!--send message to delivery-->
 			<div id="dialog" class="call-dialog-div">
-				<div id="deliveryMsgDiv" class="call-dialog-msg-div">						
+				<div id="deliveryMsgDiv" class="call-dialog-msg-div">
 				</div>
 				<div>
 					<ul class="call-dialog">
 						<li class="call-dialog-cancel">
 							<a onclick="goback();">
-							<font color="white" class="lang" data-locale="det_goodconcel"></font>
+								<font color="white" class="lang" data-locale="det_goodconcel"></font>
 							</a>
 						</li>
 						<li class="call-dialog-ok">
 							<a onclick="goSend();">
-								<font color="white" class="lang" data-locale="sendmes"></font>	
+								<font color="white" class="lang" data-locale="sendmes"></font>
 							</a>
 						</li>
 					</ul>
-					<input id="deliveryMsg" type="hidden"  value="" />
-					<input id="deliveryTel" type="hidden"  value="" />
+					<input id="deliveryMsg" type="hidden" value="" />
+					<input id="deliveryTel" type="hidden" value="" />
 				</div>
 			</div>
 			<!--show message when click 送る button-->
@@ -65,13 +68,13 @@
 	<script type="text/javascript" src="../../js/common.js"></script>
 	<script>
 		var timer;
-		mui.init();		
-		function showDialog(msg, tel,l_com_id) {
+		mui.init();
+
+		function showDialog(msg, tel, l_com_id) {
 			var dialog = document.getElementById('dialog');
 			var deliveryMsgDialog = document.getElementById('deliveryMsgDiv');
 			var content = "";
-			
-			
+
 			document.getElementById('deliveryMsg').value = msg;
 			document.getElementById('deliveryTel').value = tel;
 			// create content into innerHTML
@@ -79,19 +82,18 @@
 			content += msg;
 			content += "<br>";
 			content += tel;
-			content += TextMessage.sendtextrequest+"？</font>";
-			content += "<input type='hidden' id='l_com_idval' value='"+l_com_id+"' />";
+			content += TextMessage.sendtextrequest + "？</font>";
+			content += "<input type='hidden' id='l_com_idval' value='" + l_com_id + "' />";
 			deliveryMsgDialog.innerHTML = content;
 			dialog.style.display = "block";
 			// display div slowly
-			var x=0;
-			timer=setInterval(function()
-			{
-			    x+=0.05;
-			    dialog.style.opacity=x;
-			},10);
+			var x = 0;
+			timer = setInterval(function() {
+				x += 0.05;
+				dialog.style.opacity = x;
+			}, 10);
 		}
-		
+
 		function showCallDialog(msg, tel) {
 			var dialog = document.getElementById('dialog');
 			var deliveryMsgDialog = document.getElementById('deliveryMsgDiv');
@@ -103,41 +105,41 @@
 			content += msg;
 			content += "<br>";
 			content += tel;
-			content += TextMessage.telrequesttext+"？</font>";
+			content += TextMessage.telrequesttext + "？</font>";
 			deliveryMsgDialog.innerHTML = content;
 			dialog.style.display = "block";
 			// display div slowly
-			var x=0;
-			timer=setInterval(function()
-			{
-			    x+=0.05;
-			    dialog.style.opacity=x;
-			},10);
+			var x = 0;
+			timer = setInterval(function() {
+				x += 0.05;
+				dialog.style.opacity = x;
+			}, 10);
 		}
-		
+
 		// close div and stop the timer
 		function goback() {
 			var dialog = document.getElementById('dialog');
 			clearInterval(timer);
-			dialog.style.opacity=0;
-			dialog.style.display="none";
+			dialog.style.opacity = 0;
+			dialog.style.display = "none";
 		}
+
 		function goSend() {
 			var dialog = document.getElementById('dialog');
 			var dialogOK = document.getElementById('dialogOK');
 			var msg = document.getElementById('deliveryMsg').value;
 			var tel = document.getElementById('deliveryTel').value;
-			if(document.getElementById('l_com_idval')){
-				var loid=document.getElementById('l_com_idval').value;
+			if(document.getElementById('l_com_idval')) {
+				var loid = document.getElementById('l_com_idval').value;
 			}
 			clearInterval(timer);
-			dialog.style.opacity=0;
+			dialog.style.opacity = 0;
 			dialog.style.display = "none";
 			// send mail OK
-			if (msg !== "" && tel != "") {
-				if(loid!=null){
+			if(msg !== "" && tel != "") {
+				if(loid != null) {
 					var params = {
-						"l_com_id":loid
+						"l_com_id": loid
 					};
 					Repository.Commodity.logisticssendmail(params, {
 						ok: function(data) {
@@ -150,13 +152,13 @@
 								alert(TextMessage.test);
 								mui.openWindow({
 									id: 'login',
-									url:'../main/login.html'
+									url: '../main/login.html'
 								});
 							}
 						}
 					});
 				}
-				
+
 				// show dialog OK
 				dialogOK.style.display = "block";
 				var content = "";
@@ -165,20 +167,19 @@
 				content += TextMessage.sedsuccseetext;
 				content += "<br>";
 				content += msg + "<br>";
-				content += tel + TextMessage.mailsucetext+"<br>";
-				content += TextMessage.requestmailtext+"<br><br></font>";
+				content += tel + TextMessage.mailsucetext + "<br>";
+				content += TextMessage.requestmailtext + "<br><br></font>";
 				content += "<a onclick=\"gook();\">";
 				content += "<font color=\"white\">OK</font>";
 				content += "</a>";
 				content += "</div>";
 				dialogOK.innerHTML = content;
 				// display div slowly
-				var x=0;
-				timer=setInterval(function()
-				{
-				    x+=0.05;
-				    dialogOK.style.opacity=x;
-				},10);
+				var x = 0;
+				timer = setInterval(function() {
+					x += 0.05;
+					dialogOK.style.opacity = x;
+				}, 10);
 			} else {
 				// phone call OK
 				window.location.href = "tel://" + tel;
@@ -188,28 +189,29 @@
 		function gook(msg, tel) {
 			var dialogOK = document.getElementById('dialogOK');
 			clearInterval(timer);
-			dialogOK.style.opacity=0;
-			dialogOK.style.display="none";
+			dialogOK.style.opacity = 0;
+			dialogOK.style.display = "none";
 		}
-		function showlogisticslist(results){
-			var datearr=results.data;
-			for(var da=0;da<datearr.length;da++){
-				var l_com_id=datearr[da].l_com_id;
-				var l_com_name=datearr[da].l_com_name;
-				var l_com_phone=datearr[da].l_com_phone;
-				var l_com_pro=datearr[da].l_com_pro;
-				var l_com_email=datearr[da].l_com_email;
-				var l_com_url=datearr[da].l_com_url;
+
+		function showlogisticslist(results) {
+			var datearr = results.data;
+			for(var da = 0; da < datearr.length; da++) {
+				var l_com_id = datearr[da].l_com_id;
+				var l_com_name = datearr[da].l_com_name;
+				var l_com_phone = datearr[da].l_com_phone;
+				var l_com_pro = datearr[da].l_com_pro;
+				var l_com_email = datearr[da].l_com_email;
+				var l_com_url = datearr[da].l_com_url;
 				//console.log("l_com_id:"+l_com_id+"l_com_name"+l_com_name);
 				var html = new Util.StringBuilder();
-					html.append('<ul class="delivery-info"><li class="delivery-icon">')
-						.appendFormat('<a href="#" onclick="location.href='+"'{0}'"+'"><img height="100%" width="100%" src="../../images/car.png"/></a>', l_com_url)
-						.appendFormat('</li><li class="delivery-detail"><font color="#000000" size="2">{0}<br>{1}<br>{2}</font></li></ul>', l_com_name,l_com_pro,l_com_phone)
-						.append('<ul class="delivery-list"><li class="delivery-grid">')
-						.appendFormat('<div class="delivery-detail-call" onclick="showDialog('+"'{0}'"+",'{1}'"+",'{2}'"+');">', l_com_name,l_com_phone,l_com_id)
-						.append('<font size="2" color="#FFFFFF" vertical-align="middle">'+TextMessage.sendmailbutext+'</font></div></li>')
-						.appendFormat('<li class="delivery-grid2"><div class="delivery-detail-call2" onclick="showCallDialog('+"'{0}'"+",'{1}'"+',null);"><font size="2" color="#FFFFFF" vertical-align="middle">'+TextMessage.calbutext+'</font></div></li>', l_com_name,l_com_phone)
-						.append('<li class="delivery-grid3"><div class="delivery-detail-call3"><font size="2" color="#FFFFFF" vertical-align="middle">'+TextMessage.homebutext+'</font></div></li></ul>');
+				html.append('<ul class="delivery-info"><li class="delivery-icon">')
+					.appendFormat('<a href="#" onclick="location.href=' + "'{0}'" + '"><img height="100%" width="100%" src="../../images/car.png"/></a>', l_com_url)
+					.appendFormat('</li><li class="delivery-detail"><font color="#000000" size="2">{0}<br>{1}<br>{2}</font></li></ul>', l_com_name, l_com_pro, l_com_phone)
+					.append('<ul class="delivery-list"><li class="delivery-grid">')
+					.appendFormat('<div class="delivery-detail-call" onclick="showDialog(' + "'{0}'" + ",'{1}'" + ",'{2}'" + ');">', l_com_name, l_com_phone, l_com_id)
+					.append('<font size="2" color="#FFFFFF" vertical-align="middle">' + TextMessage.sendmailbutext + '</font></div></li>')
+					.appendFormat('<li class="delivery-grid2"><div class="delivery-detail-call2" onclick="showCallDialog(' + "'{0}'" + ",'{1}'" + ',null);"><font size="2" color="#FFFFFF" vertical-align="middle">' + TextMessage.calbutext + '</font></div></li>', l_com_name, l_com_phone)
+					.append('<li class="delivery-grid3"><div class="delivery-detail-call3"><font size="2" color="#FFFFFF" vertical-align="middle">' + TextMessage.homebutext + '</font></div></li></ul>');
 				$(".tran-body").append(html.toString());
 				$("#goback").html(TextMessage.back);
 			}
@@ -227,7 +229,7 @@
 						alert(TextMessage.test);
 						mui.openWindow({
 							id: 'login',
-							url:'../main/login.html'
+							url: '../main/login.html'
 						});
 					}
 				}
